change subtitle in project pages

--- a/src/roleplay.html
+++ b/src/roleplay.html
@@ -37,7 +37,7 @@
                 <div class="right_roleplay">
                     <div class="titre">
                         <h1 class="h1-roleplay">NARUEL</h1>
-                        <p class="sous-titre">Conception du site web et sa base de donnée</p>
+                        <p class="sous-titre">Conception d'un site web</p>
                     </div>
                     <img class="desktop_roleplay2" src="scss/desktop_roleplay.png" alt="mac">
                     <div class="container-text">
