--- a/src/index.html
+++ b/src/index.html
@@ -57,7 +57,7 @@
                     <div class="title">
                         <h2 class="number">01</h2>
                         <h2>Pastry Paris</h2>
-                        <h3>Design d'une page produit</h3>
+                        <h3>Design d'une maquette</h3>
                         <p>Plonger l'utilisateur dans une boutique de patisserie séduisante et intuitive.</p>
                         <h3 class="date">Février 2020</h3>
                         <a href="pastry.html" class="button">En savoir +</a>
@@ -112,7 +112,7 @@
                     <div class="title">
                         <h2 class="number">04</h2>
                         <h2>Naruel</h2>
-                        <h3>Conception du site web et sa base de donnée</h3>
+                        <h3>Conception d'un site web</h3>
                         <p>Organisation des parties d'un jeu de rôle et de ses personnages</p>
                         <h3 class="date">Decembre 2019</h3>
                         <a href="roleplay.html" class="button">En savoir +</a>
@@ -131,7 +131,7 @@
                         <h2 class="number">05</h2>
                         <h2>Portfolio</h2>
                         <h3>Conception de ce portfolio</h3>
-                        <p>Plonger l'utilisateur dans une boutique de jus de fruit séduisante et intuitive.</p>
+                        <p>Présenter mes projets web sur un site fluide et responsive</p>
                         <h3 class="date">Mai 2021</h3>
                         <a href="portfolio.html" class="button">En savoir +</a>
                     </div>
@@ -200,7 +200,7 @@
 
         <section id="about" class="about">
             <div class="tablette-container">
-                <p>Hello ! Je m’appel Mehdi, passionné par l’informatique depuis quelque années, j’ai décidé d’en 
+                <p>Hello ! Je m’appel Mehdi, passionné par l’informatique depuis quelques années, j’ai décidé d’en 
                 faire mon métier. De nature curieuse et déterminée, je prend énormement de plaisir à découvrir et 
                 apprendre de nouvelles technologies. Adepte du “Always keep learning”, je suis à la recherche d’une 
                 alternance qui me permettra de progresser d’échanger et d’évoluer d’un point de vue technique et 
