--- a/src/portfolio.html
+++ b/src/portfolio.html
@@ -38,7 +38,7 @@
                 <div class="right_portfolio">
                     <div class="titre">
                         <h1 class="h1-portfolio">Portfolio</h1>
-                        <p class="sous-titre">Site actuel</p>
+                        <p class="sous-titre">Site sur lequel vous êtes actuellement</p>
                     </div>
                     <img class="iphone_portfolio3" src="scss/sammsung_portfolio.png" alt="iphone">
                     <div class="container-text">
