burger menu correction

--- a/src/index.html
+++ b/src/index.html
@@ -13,10 +13,10 @@
                 <nav class="menu" id="menu">
                     <small>Explore</small>
                     <ul id="nav">
-                        <li><a href="#home">Home</a></li>
-                        <li><a href="#pastry">Works</a></li>
-                        <li><a href="#skills">Skills</a></li>
-                        <li><a href="#about">About</a></li>
+                        <li><a id="home-link" href="#home">Home</a></li>
+                        <li><a id ="works-link" href="#pastry">Works</a></li>
+                        <li><a id ="skills-link" href="#skills">Skills</a></li>
+                        <li><a id ="about-link" href="#about">About</a></li>
                     </ul>
                     <small class="follow">Follow me</small>
                     <ul class="logo">
@@ -200,7 +200,7 @@
 
         <section id="about" class="about">
             <div class="tablette-container">
-                <p>Hello ! Je m’appel Mehdi, passionné par l’informatique depuis quelques années, j’ai décidé d’en 
+                <p>Hello ! Je m’appelle Mehdi, passionné par l’informatique depuis plusieurs années, j’ai décidé d’en 
                 faire mon métier. De nature curieuse et déterminée, je prend énormement de plaisir à découvrir et 
                 apprendre de nouvelles technologies. Adepte du “Always keep learning”, je suis à la recherche d’une 
                 alternance qui me permettra de progresser d’échanger et d’évoluer d’un point de vue technique et 
