--- a/src/index.html
+++ b/src/index.html
@@ -58,7 +58,7 @@
                         <h2 class="number">01</h2>
                         <h2>Pastry Paris</h2>
                         <h3>Design d'une maquette</h3>
-                        <p>Plonger l'utilisateur dans une boutique de patisserie séduisante et intuitive.</p>
+                        <p>Plonger l'utilisateur dans une boutique de patisserie séduisante et fluide.</p>
                         <h3 class="date">Février 2020</h3>
                         <a href="pastry.html" class="button">En savoir +</a>
                     </div>
@@ -94,7 +94,7 @@
                     <div class="title">
                         <h2 class="number">03</h2>
                         <h2>Feed.</h2>
-                        <h3>Design d'une page produit</h3>
+                        <h3>Conception d'un site vitrine</h3>
                         <p>Plonger l'utilisateur dans une boutique de jus de fruit séduisante et intuitive.</p>
                         <h3 class="date">Mai 2020</h3>
                         <a href="feed.html" class="button">En savoir +</a>
