--- a/src/hajime.html
+++ b/src/hajime.html
@@ -69,7 +69,7 @@
                     PROJET PRECEDENT
                 </a>
             
-                <a href="feed.html" class="suivant">
+                <a href="roleplay.html" class="suivant">
                     PROJET SUIVANT
                     <img class="right" src="scss/droite.png" alt="fleche droite"> 
                 </a>
