--- a/src/roleplay.html
+++ b/src/roleplay.html
@@ -64,15 +64,11 @@
 
                 </div>
                 
-                <a href="feed.html" class="precedent">
+                <a href="hajime.html" class="precedent">
                     <img class="left" src="scss/gauche.png" alt="fleche gauche"> 
                     PROJET PRECEDENT
                 </a>
 
-                <a href="portfolio.html" class="suivant">
-                    PROJET SUIVANT
-                    <img class="right" src="scss/droite.png" alt="fleche droite"> 
-                </a>
             
                 <ul class="sidebar">
                     <li><a href="https://github.com/MehdiSaoud" onclick="window.open(this.href); return false;"><img class="github1" src="scss/github1.png" alt="github logo"></a></li>
