add link pastry

--- a/src/pastry.html
+++ b/src/pastry.html
@@ -62,7 +62,7 @@
                                 Cette maquette est en cours d'intégration en React Js.
                             </p>
                         </div>
-                        <a href="pastry.html" class="button_works">Voir la maquette</a>
+                        <a href="https://www.figma.com/proto/uN7Ig44TCuC9t26qBlxTEY/PastryTime?node-id=276%3A41&scaling=scale-down&page-id=0%3A1" onclick="window.open(this.href); return false;" class="button_works">Voir la maquette</a>
                     </div>
 
                 </div>
