--- a/src/index.html
+++ b/src/index.html
@@ -43,8 +43,8 @@
             </article>
 
             <footer id="footer">
-                <p class="actuel">ÉTUDIANT EN LICENCE INFORMATIQUE</p>
-                <p class="objectif">Je suis actuellement à la recherche d'une alternance en contrat d'apprentissage pour 1 an à partir de septembre 2021</p>
+                <p class="actuel">2e ANNÉE DE BACHELOR DÉVELOPPEUR WEB| HETIC</p>
+                <p class="objectif">Je suis actuellement à la recherche d'un contrat d'apprentissage en alternance pour 1 an à partir de septembre 2021</p>
                 <small>Scroll</small>
                 <a href="#pastry"><img class="scroll_down" src="scss/scroll.svg" alt="scroll"></a>
             </footer>
@@ -74,7 +74,7 @@
                 <div>
                     <div class="title">
                         <h2 class="number">02</h2>
-                        <h2>Hajime dem</h2>
+                        <h2>Hadjime dem</h2>
                         <h3>Conception d'un générateur de devis</h3>
                         <p>Formulaire de saisie d'informations générant un devis de déménagement</p>
                         <h3 class="date">Janvier 2021</h3>
