--- a/src/hajime.html
+++ b/src/hajime.html
@@ -14,7 +14,7 @@
                     <small>Explore</small>
                     <ul id="nav">
                         <li><a href="index.html#home">Home</a></li>
-                        <li><a href="index.html#pastry">Works</a></li>
+                        <li><a href="index.html#roleplay">Works</a></li>
                         <li><a href="index.html#skills">Skills</a></li>
                         <li><a href="index.html#about">About</a></li>
                     </ul>
@@ -64,12 +64,12 @@
 
                 </div>
                 
-                <a href="pastry.html" class="precedent">
+                <a href="roleplay.html" class="precedent">
                     <img class="left" src="scss/gauche.png" alt="fleche gauche"> 
                     PROJET PRECEDENT
                 </a>
             
-                <a href="roleplay.html" class="suivant">
+                <a href="pastry.html" class="suivant">
                     PROJET SUIVANT
                     <img class="right" src="scss/droite.png" alt="fleche droite"> 
                 </a>
