--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
                     <small>Explore</small>
                     <ul id="nav">
                         <li><a id="home-link" href="#home">Home</a></li>
-                        <li><a id ="works-link" href="#pastry">Works</a></li>
+                        <li><a id ="works-link" href="#roleplay">Works</a></li>
                         <li><a id ="skills-link" href="#skills">Skills</a></li>
                         <li><a id ="about-link" href="#about">About</a></li>
                     </ul>
@@ -43,28 +43,28 @@
             </article>
 
             <footer id="footer">
-                <p class="actuel">2e ANNÉE DE BACHELOR DÉVELOPPEUR WEB| HETIC</p>
-                <p class="objectif">Je suis actuellement à la recherche d'un contrat d'apprentissage en alternance pour 1 an à partir de septembre 2021</p>
+                <p class="actuel">2e ANNÉE DE BACHELOR DÉVELOPPEUR WEB | HETIC</p>
+                <p class="objectif">Je suis à la recherche d'un contrat d'apprentissage en alternance pour 1 an à partir de septembre 2021</p>
                 <small>Scroll</small>
-                <a href="#pastry"><img class="scroll_down" src="scss/scroll.svg" alt="scroll"></a>
+                <a href="#roleplay"><img class="scroll_down" src="scss/scroll.svg" alt="scroll"></a>
             </footer>
 
         
         </section>
-        <section id="pastry" class="works">
+        <section id="roleplay" class="works">
             <article>
                 <div>
                     <div class="title">
                         <h2 class="number">01</h2>
-                        <h2>Pastry Paris</h2>
-                        <h3>Design d'une maquette</h3>
-                        <p>Plonger l'utilisateur dans une boutique de patisserie séduisante et fluide.</p>
-                        <h3 class="date">Février 2020</h3>
-                        <a href="pastry.html" class="button">En savoir +</a>
+                        <h2>Naruel</h2>
+                        <h3>Conception d'un site web</h3>
+                        <p>Organisation des parties d'un jeu de rôle et de ses personnages</p>
+                        <h3 class="date">Decembre 2019</h3>
+                        <a href="roleplay.html" class="button">En savoir +</a>
                     </div>
                 </div>
                 <div class="visual"> 
-                    <a href="pastry.html" class="button-mobile">En savoir +</a>
+                    <a href="roleplay.html" class="button-mobile">En savoir +</a>
                 </div>
             </article>
 
@@ -88,20 +88,20 @@
             </article>
 
         </section>
-        <section id="roleplay" class="works">
+        <section id="pastry" class="works">
             <article>
                 <div>
                     <div class="title">
-                        <h2 class="number">04</h2>
-                        <h2>Naruel</h2>
-                        <h3>Conception d'un site web</h3>
-                        <p>Organisation des parties d'un jeu de rôle et de ses personnages</p>
-                        <h3 class="date">Decembre 2019</h3>
-                        <a href="roleplay.html" class="button">En savoir +</a>
+                        <h2 class="number">03</h2>
+                        <h2>Pastry Paris</h2>
+                        <h3>Design d'une maquette</h3>
+                        <p>Plonger l'utilisateur dans une boutique de patisserie séduisante et fluide.</p>
+                        <h3 class="date">Février 2020</h3>
+                        <a href="pastry.html" class="button">En savoir +</a>
                     </div>
                 </div>
                 <div class="visual"> 
-                    <a href="roleplay.html" class="button-mobile">En savoir +</a>
+                    <a href="pastry.html" class="button-mobile">En savoir +</a>
                 </div>
             </article>
 
