--- a/src/index.html
+++ b/src/index.html
@@ -44,7 +44,7 @@
 
             <footer id="footer">
                 <p class="actuel">2e ANNÉE DE BACHELOR DÉVELOPPEUR WEB | HETIC</p>
-                <p class="objectif">Je suis à la recherche d'un contrat d'apprentissage en alternance pour 1 an à partir de septembre 2021</p>
+                <p class="objectif">Je suis à la recherche d'un contrat d'apprentissage en alternance pour 1 à 2 ans à partir de septembre 2021</p>
                 <small>Scroll</small>
                 <a href="#roleplay"><img class="scroll_down" src="scss/scroll.svg" alt="scroll"></a>
             </footer>
@@ -155,7 +155,7 @@
                     </ul>
                     <ul>
                         <li>PROJECT MANAGEMENT</li>
-                        <li>Méthode agile</li>
+                        <li>Méthode agile | SCRUM</li>
                     </ul>
                 </div>
                 
