--- a/src/index.html
+++ b/src/index.html
@@ -114,7 +114,7 @@
                         <h2 class="number">05</h2>
                         <h2>Portfolio</h2>
                         <h3>Conception de ce portfolio</h3>
-                        <p>Plonger l'utilisateur dans une boutique de jus de fruit séduisante et intuitive.</p>
+                        <p>Présenter mes projet sur un site fluide et responsive</p>
                         <h3 class="date">Mai 2021</h3>
                         <a href="portfolio.html" class="button">En savoir +</a>
                     </div>
