--- a/src/roleplay.html
+++ b/src/roleplay.html
@@ -43,7 +43,7 @@
                     <div class="container-text">
                         <div class="text">
                             <p>
-                                Après 2 semaine de cours de PHP nous avions 1 semaine pour faire l'un des projet qui nous a été attribué :
+                                Après 2 semaines de cours de PHP nous avions 8 jours pour faire l'un des projets qui nous a été attribué :
                             </p>
                             <p>
                                 Naruel, une plateforme en ligne codé en HTML CSS JavaScript PHP & MySQL sur XAMPP sous Linux.
@@ -56,7 +56,7 @@
                                 La manipulation de la base de données MySQL se faisait via PHPMyadmin après avoir été soigneusement organisée grâce à un MCD (Modèle Conceptuel des Données) puis un MLD (Modèle Logique de Données).
                             </p>
                             <p>
-                                L'ambition principale était de créer une plateforme qui se démarquerait visuellement tout en restant dans un décor de jeux de rôle épique, facile à naviguer pour tous les utilisateurs. Nous avons utilisé des grid et des flexbox pour la mise en page et quelque animation avec des keyframes.
+                                L'ambition principale était de créer une plateforme qui se démarquerait visuellement tout en restant dans un décor de jeux de rôle épique, facile à naviguer pour tous les utilisateurs. Nous avons utilisé des grid et des flexbox pour la mise en page et quelques animations avec des keyframes.
                             </p>
                         </div>
                         <a href="https://naruel.com/" onclick="window.open(this.href); return false;" class="button_works">Voir le site</a>
