--- a/src/index.html
+++ b/src/index.html
@@ -58,7 +58,7 @@
                         <h2 class="number">01</h2>
                         <h2>Naruel</h2>
                         <h3>Conception d'un site web</h3>
-                        <p>Organisation des parties d'un jeu de rôle et de ses personnages</p>
+                        <p>Organisez les parties et créez les personnages d'un jeu de rôle</p>
                         <h3 class="date">Decembre 2019</h3>
                         <a href="roleplay.html" class="button">En savoir +</a>
                     </div>
@@ -229,7 +229,7 @@
         <section id="about" class="about">
             <div class="tablette-container">
                 <p>Hello ! Je m’appelle Mehdi, passionné par l’informatique depuis plusieurs années, j’ai décidé d’en 
-                faire mon métier. De nature curieuse et déterminée, je prend énormement de plaisir à découvrir et 
+                faire mon métier. De nature curieuse et déterminée, je prends énormement de plaisir à découvrir et 
                 apprendre de nouvelles technologies. Adepte du “Always keep learning”, je suis à la recherche d’une 
                 alternance qui me permettra de progresser d’échanger et d’évoluer d’un point de vue technique et 
                 professionnel.</p>
