--- a/src/pastry.html
+++ b/src/pastry.html
@@ -14,7 +14,7 @@
                     <small>Explore</small>
                     <ul id="nav">
                         <li><a href="index.html#home">Home</a></li>
-                        <li><a href="index.html#roleplay">Works</a></li>
+                        <li><a href="index.html#pastry">Works</a></li>
                         <li><a href="index.html#skills">Skills</a></li>
                         <li><a href="index.html#about">About</a></li>
                     </ul>
