--- a/src/index.html
+++ b/src/index.html
@@ -175,7 +175,7 @@
             <article>
                 <h2>Skills</h2>
                 <div class="first">
-                    <h3>FRONT-END</h3>
+                    <h3>DÉVELOPPEMENT</h3>
                     <ul>
                         <li>LANGUAGES</li>
                         <li>HTML5</li>
