add maison-vapeur project

--- a/src/index.html
+++ b/src/index.html
@@ -44,18 +44,37 @@
 
             <footer id="footer">
                 <p class="actuel">2e ANNÉE DE BACHELOR DÉVELOPPEUR WEB | HETIC</p>
-                <p class="objectif">Je suis à la recherche d'un contrat d'apprentissage en alternance pour 1 à 2 ans à partir de septembre 2021</p>
+                <p class="objectif">Je suis à la recherche d'un contrat d'apprentissage en alternance d'une durée de 2 ans à partir de octobre 2021</p>
                 <small>Scroll</small>
                 <a href="#roleplay"><img class="scroll_down" src="scss/scroll.svg" alt="scroll"></a>
             </footer>
 
         
         </section>
-        <section id="roleplay" class="works">
+        <section id="maison-vapeur" class="works">
             <article>
                 <div>
                     <div class="title">
                         <h2 class="number">01</h2>
+                        <h2>La Maison Vapeur</h2>
+                        <h3>Site vitrine</h3>
+                        <p>Site e-commerce développé en React JS</p>
+                        <h3 class="date">Août 2021</h3>
+                        <a href="maison-vapeur.html" class="button">En savoir +</a>
+                    </div>
+                </div>
+                <div class="visual"> 
+                    <img src="scss/vapeur.png" alt="logo maison vapeur">
+                    <a href="maison-vapeur.html" class="button-mobile">En savoir +</a>
+                </div>
+            </article>
+
+        </section>
+        <section id="roleplay" class="works">
+            <article>
+                <div>
+                    <div class="title">
+                        <h2 class="number">02</h2>
                         <h2>Naruel</h2>
                         <h3>Conception d'un site web</h3>
                         <p>Organisez les parties et créez les personnages d'un jeu de rôle</p>
@@ -73,7 +92,7 @@
             <article>
                 <div>
                     <div class="title">
-                        <h2 class="number">02</h2>
+                        <h2 class="number">03</h2>
                         <h2>Hadjime dem</h2>
                         <h3>Conception d'un générateur de devis</h3>
                         <p>Formulaire de saisie d'informations générant un devis de déménagement</p>
@@ -92,7 +111,7 @@
             <article>
                 <div>
                     <div class="title">
-                        <h2 class="number">03</h2>
+                        <h2 class="number">04</h2>
                         <h2>Pastry Paris</h2>
                         <h3>Design d'une maquette</h3>
                         <p>Plonger l'utilisateur dans une boutique de patisserie séduisante et fluide.</p>
