update button naruel

--- a/src/roleplay.html
+++ b/src/roleplay.html
@@ -59,7 +59,7 @@
                                 L'ambition principale était de créer une plateforme qui se démarquerait visuellement tout en restant dans un décor de jeux de rôle épique, facile à naviguer pour tous les utilisateurs. Nous avons utilisé des grid et des flexbox pour la mise en page et quelques animations avec des keyframes.
                             </p>
                         </div>
-                        <a href="https://naruel.com/" onclick="window.open(this.href); return false;" class="button_works">Voir le site</a>
+                        <a href="http://naruel.fr/" onclick="window.open(this.href); return false;" class="button_works">Voir le site</a>
                     </div>
 
                 </div>
