add feed project

--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
                     <small>Explore</small>
                     <ul id="nav">
                         <li><a id="home-link" href="#home">Home</a></li>
-                        <li><a id ="works-link" href="#roleplay">Works</a></li>
+                        <li><a id ="works-link" href="#maison-vapeur">Works</a></li>
                         <li><a id ="skills-link" href="#skills">Skills</a></li>
                         <li><a id ="about-link" href="#about">About</a></li>
                     </ul>
@@ -39,14 +39,14 @@
 
             <article id="article">
                 <h1 class="name">Mehdi Saoud</h1>
-                <p class="poste">DÉVELOPPEUR WEB JUNIOR</p>
+                <p class="poste">DÉVELOPPEUR FRONT-END</p>
             </article>
 
             <footer id="footer">
                 <p class="actuel">2e ANNÉE DE BACHELOR DÉVELOPPEUR WEB | HETIC</p>
                 <p class="objectif">Je suis à la recherche d'un contrat d'apprentissage en alternance d'une durée de 2 ans à partir de octobre 2021</p>
                 <small>Scroll</small>
-                <a href="#roleplay"><img class="scroll_down" src="scss/scroll.svg" alt="scroll"></a>
+                <a href="#maison-vapeur"><img class="scroll_down" src="scss/scroll.svg" alt="scroll"></a>
             </footer>
 
         
@@ -107,11 +107,29 @@
             </article>
 
         </section>
-        <section id="pastry" class="works">
+        <section id="feed" class="works">
             <article>
                 <div>
                     <div class="title">
                         <h2 class="number">04</h2>
+                        <h2>Feed.</h2>
+                        <h3>Design d'une page produit</h3>
+                        <p>Plonger l'utilisateur dans une boutique de jus de fruit séduisante et intuitive.</p>
+                        <h3 class="date">Mai 2020</h3>
+                        <a href="feed.html" class="button">En savoir +</a>
+                    </div>
+                </div>
+                <div class="visual"> 
+                    <a href="feed.html" class="button-mobile">En savoir +</a>
+                </div>
+            </article>
+
+        </section>
+        <section id="pastry" class="works">
+            <article>
+                <div>
+                    <div class="title">
+                        <h2 class="number">05</h2>
                         <h2>Pastry Paris</h2>
                         <h3>Design d'une maquette</h3>
                         <p>Plonger l'utilisateur dans une boutique de patisserie séduisante et fluide.</p>
@@ -130,7 +148,7 @@
             <article>
                 <div>
                     <div class="title">
-                        <h2 class="number">05</h2>
+                        <h2 class="number">06</h2>
                         <h2>Portfolio</h2>
                         <h3>Conception de ce portfolio</h3>
                         <p>Présenter mes projet sur un site fluide et responsive</p>
