add borne project

--- a/src/hajime.html
+++ b/src/hajime.html
@@ -53,7 +53,7 @@
                                 Les maquettes ont été réalisées sur Figma avec l'aide d'un designer web junior.
                             </p>
                             <p>
-                                Pour l'intégration de cette application web nous avons utilisé la plateforme fullstack JavaScript MEAN (MongoDB | Express | AngularJS | NodeJS).
+                                Pour l'intégration de cette application web nous avons utilisé la stack MEAN (MongoDB | Express | AngularJS | NodeJS).
                             </p>
                             <p>
                                 Nous avons intégrer le stepper et les inputs du formulaire avec la librairie Angular Material.
