--- a/src/index.html
+++ b/src/index.html
@@ -76,9 +76,9 @@
                     <div class="title">
                         <h2 class="number">02</h2>
                         <h2>Naruel</h2>
-                        <h3>Conception d'un site web</h3>
-                        <p>Organisez les parties et créez les personnages d'un jeu de rôle</p>
-                        <h3 class="date">Decembre 2019</h3>
+                        <h3>Conception d'une application web</h3>
+                        <p>Organiser les parties et créer les personnages d'un jeu de rôle</p>
+                        <h3 class="date">Mai 2020</h3>
                         <a href="roleplay.html" class="button">En savoir +</a>
                     </div>
                 </div>
@@ -95,8 +95,8 @@
                         <h2 class="number">03</h2>
                         <h2>Hadjime dem</h2>
                         <h3>Conception d'un générateur de devis</h3>
-                        <p>Formulaire de saisie d'informations générant un devis de déménagement</p>
-                        <h3 class="date">Janvier 2021</h3>
+                        <p>Formulaire générant un devis de déménagement développé en MEAN Stack</p>
+                        <h3 class="date">Juillet 2021</h3>
                         <a href="hajime.html" class="button">En savoir +</a>
                     </div>
                 </div>
@@ -125,15 +125,33 @@
             </article>
 
         </section>
-        <section id="pastry" class="works">
+        <section id="borne" class="works">
             <article>
                 <div>
                     <div class="title">
                         <h2 class="number">05</h2>
+                        <h2>Borne</h2>
+                        <h3>Conception d'une borne de restaurant</h3>
+                        <p>Passer ses commandes sur une borne de restaurant développé en MERN Stack</p>
+                        <h3 class="date">Septembre 2021</h3>
+                        <a href="borne.html" class="button">En savoir +</a>
+                    </div>
+                </div>
+                <div class="visual"> 
+                    <a href="borne.html" class="button-mobile">En savoir +</a>
+                </div>
+            </article>
+
+        </section>
+        <section id="pastry" class="works">
+            <article>
+                <div>
+                    <div class="title">
+                        <h2 class="number">06</h2>
                         <h2>Pastry Paris</h2>
                         <h3>Design d'une maquette</h3>
                         <p>Plonger l'utilisateur dans une boutique de patisserie séduisante et fluide.</p>
-                        <h3 class="date">Février 2020</h3>
+                        <h3 class="date">Février 2021</h3>
                         <a href="pastry.html" class="button">En savoir +</a>
                     </div>
                 </div>
@@ -148,7 +166,7 @@
             <article>
                 <div>
                     <div class="title">
-                        <h2 class="number">06</h2>
+                        <h2 class="number">07</h2>
                         <h2>Portfolio</h2>
                         <h3>Conception de ce portfolio</h3>
                         <p>Présenter mes projet sur un site fluide et responsive</p>
@@ -217,7 +235,7 @@
                         <li>LANGUAGES</li>
                         <li>HTML5</li>
                         <li>CSS3 | SASS</li>
-                        <li>JavaScript ES6</li>
+                        <li>React JS | JavaScript ES6</li>
                         <li>PHP | MySQL | PostgreSQL</li>
                     </ul>
                     <ul>
@@ -268,7 +286,7 @@
                 <p>Hello ! Je m’appelle Mehdi, passionné par l’informatique depuis plusieurs années, j’ai décidé d’en 
                 faire mon métier. De nature curieuse et déterminée, je prends énormement de plaisir à découvrir et 
                 apprendre de nouvelles technologies. Adepte du “Always keep learning”, je suis à la recherche d’une 
-                alternance qui me permettra de progresser d’échanger et d’évoluer d’un point de vue technique et 
+                alternance qui me permettra de progresser, d’échanger et d’évoluer d’un point de vue technique et 
                 professionnel.</p>
                 <img class="tablette" src="scss/tablette.png" alt="tablette">
                 <div class="roundedImage">
