--- a/src/pastry.html
+++ b/src/pastry.html
@@ -68,7 +68,7 @@
                 </div>
             
             
-                <a href="hajime.html" class="precedent">
+                <a href="borne.html" class="precedent">
                     <img class="left" src="scss/gauche.png" alt="fleche gauche"> 
                     PROJET PRECEDENT
                 </a>
