--- a/src/hajime.html
+++ b/src/hajime.html
@@ -44,7 +44,7 @@
                     <div class="container-text">
                         <div class="text">
                             <p>
-                                Cette application web est un formulaire de saisie d'information pour les personnes qui souhaitent acheter un service de déménagement. 
+                                Cette version mobile d'application web est un formulaire de saisie d'information pour les personnes qui souhaitent acheter un service de déménagement. 
                             </p>
                             <p>
                                 Les données saisie par l'utilisateur sont envoyé à la base MongoDB, un devis est ensuite généré selon les données reçues.
