--- a/src/borne.html
+++ b/src/borne.html
@@ -55,6 +55,9 @@
                             <p>
                                 Le style à été intégré avec le pré-processeur SASS.
                             </p>
+                            <p>
+                                PS : le code promo est "VOUSETESEMBAUCHE"
+                            </p>
                         </div>
                         <a href="https://github.com/MehdiSaoud/Borne-Restaurant" onclick="window.open(this.href); return false;" class="button_works">Voir le repository</a>
                     </div>
