add borne website

--- a/src/borne.html
+++ b/src/borne.html
@@ -59,7 +59,7 @@
                                 PS : le code promo est "VOUSETESEMBAUCHE"
                             </p>
                         </div>
-                        <a href="https://github.com/MehdiSaoud/Borne-Restaurant" onclick="window.open(this.href); return false;" class="button_works">Voir le repository</a>
+                        <a href="https://borne-restaurant.netlify.app/" onclick="window.open(this.href); return false;" class="button_works">Voir le site</a>
                     </div>
 
                 </div>
